	* Fix group separator problem in formulas (BUG 468098)
	* Improve log scales (auto scaling and tick number)
	* Improve auto scale (Issue #536)
	* Fix limits when changing scale (Issue #446)
	* Use system liborigin headers if linking against system liborigin (BUG 469367)
	* Don't clear the undo history when saving the project (BUG 470727)
	* In the collections of example projects, color maps and data sets allow also to search for sub-strings and do the search case-insensitive
	* Properly save and load the property "visible" for box and bar plots in the project file
	* Fixed copy&paste and duplication of box and bar plots

-----2.10.0 (21.03.2023) -----
New features:
	* [worksheet]
		* Bar plots
		* Plot templates - allow to save and re-use custom plot configurations
		* Histogram
			* Error bars (Possion sqrt(N) error or values from custom columns)
			* Rug plots
		* Box Plot
			* Rug plots
			* Symbols for whisker end points
			* Allow to modify box properties (color, etc.) for every data set independently of each other
			* Draw a legend item for every dataset in the box plot
		* Reference Range - custom area on the plot to highlight a certain x- or y-range
		* Show LaTeX error messages in text labels when rendering with LaTeX
	* [spreadsheet]
		* Use a different icon for calculated columns, also show the definition of the formula and parameters in the tooltip text in the project explorer
		* Heatmap formatting for categorical data in text columns
		* When generating random numbers, allow to specify the seed number
		* Column statistics for text columns including the frequency table, bar and Pareto plots
		* Column statistics for selected cells only
		* Dropping and masking of values also for text and datetime columns
		* Data sampling (random and periodic methods)
		* Data 'flattening' - convert pivoted data to column base format
		* Column statistics (size, mean, stddev, etc.) are available in the function dialog