@@ -9,6 +9,7 @@ Bug fixes:
 	* Fix limits when changing scale (Issue #446)
 	* Use system liborigin headers if linking against system liborigin (BUG 469367)
 	* Don't clear the undo history when saving the project (BUG 470727)
+	* Properly react on orientation changes in the worksheet properties explorer
 	* In the collections of example projects, color maps and data sets allow also to search for sub-strings and do the search case-insensitive
 	* Properly save and load the property "visible" for box and bar plots in the project file
 	* Fixed copy&paste and duplication of box and bar plots
